tests/negative/neg_chan_full_send.safe
-- Test: neg_chan_full_send
-- Description: Legacy blocking send syntax is rejected.
--   PR11.9d removes the two-argument blocking send form from accepted
--   source. Any remaining `send ch, value;` spellings are rejected with
--   a migration diagnostic directing the programmer to `send ch, value, ok;`.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p27:ef0ce6bd
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.2.p15:b5b29b0e
-- Expected: REJECT source_frontend_error

package full_send_test

   subtype msg is integer (0 to 255)

   channel ch : msg capacity 1

   --  Sender_Task: legacy blocking send syntax.
   task sender_task

      loop
         send ch, 1
         send ch, 2
